--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-sale=1.0">
-    <title>wow</title>
+    <title>Гажевики</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
